<resources>
    <string name="app_name">노마드워커</string>
    <string name="home_label">홈</string>
    <string name="feed_label">피드</string>
    <string name="search_label">검색</string>
    <string name="my_page_label">마이페이지</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in_text">로그인</string>
    <string name="sign_up_text">회원가입</string>
    <string name="verify_number">인증 번호</string>
    <string name="next">다음</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="complete_signup">가입하기</string>
    <string name="signup_email_title">이메일을 입력해주세요.</string>
    <string name="signup_email_title_message">이메일 인증을 위해 정확한 이메일을 입력해주세요.</string>
    <string name="signup_verify">인증하기</string>
    <string name="signup_verify_title">인증 번호를 입력해주세요.</string>
    <string name="signup_verify_title_message">작성하신 이메일로 전송 된 인증 번호를 입력해주세요.</string>
    <string name="resend_verify_code">인증 번호를 못 받았어요 :(</string>
    <string name="signup_password_title">비밀번호를 입력해주세요.</string>
    <string name="signup_password_title_message">영어와 숫자, 문자를 포함해 8~16자리 이내로 입력해주세요.</string>
    <string name="signup_nickname_title">사용하실 닉네임을 입력해주세요.</string>
    <string name="signup_nickname_title_message">닉네임은 수정이 불가하니 신중하게 입력해주세요 :)</string>
    <string name="correct_password">알맞은 비밀번호 입니다 :)</string>
    <string name="incorrect_password">적합하지 않은 비밀번호 입니다 :(</string>
    <string name="same_password">비밀번호가 일치합니다!</string>
    <string name="different_password">동일한 비밀번호를 입력해주세요.</string>
    <string name="correct_email_format">여기로 인증 번호를 보낼게요!</string>
    <string name="incorrect_email_format">잘못된 이메일 형식이에요 :(</string>
    <string name="already_user">이미 존재하는 이메일입니다!</string>
    <string name="verify_email_success">인증 되었어요!</string>
    <string name="verify_email_fail">인증 번호가 틀렸습니다. 다시 확인해주세요!</string>
    <string name="usable_nickname">사용 가능한 닉네임이에요!</string>
    <string name="unusable_nickname">이미 존재하는 닉네임이에요 :(</string>
    <string name="skip_on_boarding">SKIP</string>
    <string name="permission_title">원활한 Nomad Worker 앱 사용을 위해\n아래 권한을 허용해주세요.</string>
    <string name="default_permission">필수 접근 권한</string>
    <string name="location_info">위치 정보</string>
    <string name="location_info_desc">내 위치 근처 장소를 제공하기 위한 권한</string>
    <string name="optional_permission">선택 접근 권한</string>
    <string name="camera">카메라</string>
    <string name="camera_desc">피드 작성 시 장소 촬영을 위한 권한</string>
    <string name="storage">저장소</string>
    <string name="storage_desc">피드 작성 시 장소 이미지 첨부를 위한 권한</string>
    <string name="permission_notice_desc">필수 권한을 허용하지 않는 경우 앱이 정상적으로 작동하지 않을 수 있습니다.</string>
    <string name="ok">확인</string>
    <string name="current_location_title">현재 위치를 확인해보세요</string>
    <string name="home_category_title">지역 별 근무 장소를 확인 해보세요</string>
    <string name="home_nearby_title">내 근처 근무 장소를 확인 해보세요</string>
    <string name="home_recommend_title">추천하는 근무 장소를 확인 해보세요</string>
    <string name="set_current_location">현재 위치로 설정</string>
    <string name="profile_image_modification">프로필 이미지 수정</string>
    <string name="logout">로그아웃</string>
    <string name="seoul">서울</string>
    <string name="jeju">제주</string>
    <string name="busan">부산</string>
    <string name="gangneung">강릉</string>
    <string name="cafe">카페</string>
    <string name="office">공간대여</string>
    <string name="location">지역</string>
    <string name="place">장소</string>
    <string name="search_detail">상세 검색</string>
    <string name="weekday_time_label">평일</string>
    <string name="weekend_time_label">주말</string>
    <string name="new_feed_content_title">게시글 문구를 입력하세요.</string>
    <string name="new_feed_content_subtitle">뭐라고 적는게 좋을까요?</string>
    <string name="new_feed_content_input_text_hint">ex) 조용하고 산 좋고 물 좋은 모현으로 오세요.</string>
    <string name="new_feed_photo_title">사진을 선택하세요.</string>
    <string name="new_feed_photo_subtitle">사진은 최대 1장 선택 가능합니다.</string>
    <string name="new_feed_place_title">장소를 입력하세요.</string>
    <string name="new_feed_place_subtitle">검색바에 원하는 곳을 입력해주세요.</string>
    <string name="register_feed">등록하기</string>
    <string name="check_duplicate_nickname">닉네임 중복확인</string>
    <string name="request_permission_denied">권한을 허용해주셔야 제대로 된 앱 사용이 가능합니다 :)</string>
    <string name="request_permission_granted">권한이 허용됐습니다.</string>
    <string name="permission_notice_red">접근 권한을 거부했다면 다시 허용하기를 눌러주세요. 아무런 반응이 없다면 확인을 눌러주세요. 필요할 때 요청 드리겠습니다 :)</string>
    <string name="permission_check_button">허용하기</string>
    <string name="unit_kr_currency">%s원</string>
    <string name="evaluation_alert">먼저 평가를 해주세요!</string>
    <string name="close">닫기</string>
    <string name="add_evaluation">평점 추가하기</string>
    <string name="account">계정</string>
    <string name="show_place_scrap">회원님이 스크랩한 장소 보기</string>
    <string name="information">정보</string>
    <string name="notice">공지사항</string>
    <string name="app_version">버전 정보</string>
    <string name="contact">고객센터</string>
    <string name="contact_one_by_one">1:1 문의</string>
    <string name="report_user">사용자 신고하기</string>
    <string name="terms">약관</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="personal_privacy">개인정보 처리방침</string>
    <string name="oss_license">오픈소스 라이선스</string>
    <string name="cancel">취소</string>
    <string name="user_feed">유저 피드</string>
    <string name="share_your_place">여러분들의 장소를 공유해보세요.</string>
    <string name="place_open_time">영업 시간</string>
    <string name="address">주소</string>
    <string name="more_info">상세 정보</string>
    <string name="add_place_rate">평점 추가하기</string>
    <string name="onboard_first_title">다양한 장소를 한눈에</string>
    <string name="onboard_first_subtitle">지역별, 여러분의 근처, 그리고 앱에서 추천해주는 다양한 장소를 구경해보세요. 여러분의 쾌적한 업무를 도와드릴게요!</string>
    <string name="onboard_second_title">장소에 대한 정보제공</string>
    <string name="onboard_second_subtitle">업무 공간에 대한 자세한 정보도 같이 제공해드립니다. 참고하시고 비교해서 자신에게 맞는 장소를 찾아보세요!</string>
    <string name="onboard_third_title">나만의 장소를 공유</string>
    <string name="onboard_third_subtitle">다양한 사람들의 장소를 구경해보세요. 피드를 등록해서 좋은 업무 장소에 대한 정보가 모이는데 도움을 줄수도 있습니다.</string>
    <string name="add_place">등록하러 가기</string>
    <string name="empty_scrap_message">아직 저장한 장소가 없어요.\n직접 장소를 등록해보시는 건 어떨까요?</string>
    <string name="delete_feed">피드 삭제</string>
    <string name="verify_notice">인증코드가 오지 않았다면 작성한 메일을 다시 확인해주세요.</string>
    <string name="nickname_length_notice">닉네임은 최대 5글자까지 가능합니다.</string>
    <string name="notice_new_feed_content">공백으로 문구를 채우는 것은 불가능합니다.</string>

</resources>