<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nomad_white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_back_24"
                app:title="설정" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_account_options"
                    style="@style/TextSubtitle3.Grey03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_update_profile_image"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/profile_image_modification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_account_options" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_scrap"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/show_place_scrap"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_update_profile_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email_title"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_scrap" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="@id/tv_email_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_email_title"
                    app:layout_constraintTop_toTopOf="@id/tv_email_title"
                    tools:text="vik0114@naver.com" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/nomad_blue_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_info_options"
                    style="@style/TextSubtitle3.Grey03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/information"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_notice"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/notice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_options" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_version_info_title"
                    style="@style/TextSubtitle2.Grey05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/app_version"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_notice" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_version_info"
                    style="@style/TextSubtitle2.Grey05"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="@id/tv_version_info_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_version_info_title"
                    app:layout_constraintTop_toTopOf="@id/tv_version_info_title"
                    tools:text="v 1.0.0" />

                <View
                    android:id="@+id/view_divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/nomad_blue_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_version_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_contact"
                    style="@style/TextSubtitle3.Grey03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_divider2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_contact_one_by_one"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/contact_one_by_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_contact" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_report_user"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/report_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_contact_one_by_one" />

                <View
                    android:id="@+id/view_divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/nomad_blue_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_report_user" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_terms"
                    style="@style/TextSubtitle3.Grey03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/terms"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_divider3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_tos"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/terms_of_service"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_terms" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_personal_privacy"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/personal_privacy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tos" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_oss_license"
                    style="@style/TextSubtitle2.Black01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/oss_license"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_personal_privacy" />

                <View
                    android:id="@+id/view_divider4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/nomad_blue_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_oss_license" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_logout"
                    style="@style/TextSubtitle2.Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/logout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_divider4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>